feat(exam-registrations): complete backend module
