# backend/docs/swagger.yaml
@@ -325,6 +325,31 @@ definitions:
     required:
     - enrollment_id
     - exam_id
+    - registration_status
+    type: object
+  examregistrations.ExamRegistrationResponse:
+    properties:
+      created_at:
+        type: string
+      enrollment_id:
+        type: string
+      exam_id:
+        type: string
+      exam_registration_id:
+        type: string
+      registered_at:
+        type: string
+      registration_status:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  examregistrations.UpdateExamRegistrationRequest:
+    properties:
+      registration_status:
+        type: string
+    required:
+    - registration_status
     type: object
   examrooms.CreateExamRoomRequest:
     properties:
@@ -1817,7 +1842,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieve a paginated list of exam registrations
+      description: Retrieve a paginated list of exam registrations with filtering
       parameters:
       - default: 1
         description: Page number
@@ -1829,13 +1854,32 @@ paths:
         in: query
         name: limit
         type: integer
+      - description: Filter by Exam ID
+        in: query
+        name: exam_id
+        type: string
+      - description: Filter by Enrollment ID
+        in: query
+        name: enrollment_id
+        type: string
+      - description: Filter by status
+        in: query
+        name: status
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.SuccessResponse'
+            allOf:
+            - $ref: '#/definitions/response.SuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/examregistrations.ExamRegistrationResponse'
+                  type: array
+              type: object
         "400":
           description: Bad Request
           schema:
@@ -1852,7 +1896,7 @@ paths:
       - BearerAuth: []
       summary: List Exam Registrations
       tags:
-      - Exam Registrations
+      - ExamRegistrations
     post:
       consumes:
       - application/json
@@ -1883,7 +1927,113 @@ paths:
       - BearerAuth: []
       summary: Create Exam Registration
       tags:
-      - Exam Registrations
+      - ExamRegistrations
+  /exam-registrations/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hard delete an exam registration record
+      parameters:
+      - description: Exam Registration ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete Exam Registration
+      tags:
+      - ExamRegistrations
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a single exam registration
+      parameters:
+      - description: Exam Registration ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/examregistrations.ExamRegistrationResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Exam Registration
+      tags:
+      - ExamRegistrations
+    put:
+      consumes:
+      - application/json
+      description: Update details of an existing exam registration
+      parameters:
+      - description: Exam Registration ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Registration Payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/examregistrations.UpdateExamRegistrationRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update Exam Registration
+      tags:
+      - ExamRegistrations
   /exam-rooms:
     get:
       consumes:
